Fixed a few more layout issues.

--- a/css/styles.css
+++ b/css/styles.css
@@ -1,3 +1,5 @@
+@import "./normalize.css";
+
 :root {
     --color-primary: #2584ff;
     --color-secondary: #00d9ff;
@@ -33,7 +35,7 @@ body {
 h1, h2, h3 {
     color: var(--color-headings);
     margin-bottom: 1rem;
-    line-height: 1.1;
+    line-height: 1.3;
 }
 
 h1 {
@@ -46,7 +48,7 @@ h2 {
 }
 
 h3 {
-    font-size: 3rem;
+    font-size: 2.8rem;
     font-weight: 500;
 }
 
@@ -274,7 +276,7 @@ a {
 /* Inputs */
 .input {
     border-radius: var(--border-radius);
-    border: 1px solid var(--color-body);
+    border: 1px solid var(--color-border);
     color: var(--color-headings);
     font-size: 2rem;
     outline: 0;
@@ -317,7 +319,7 @@ a {
 
 .card__header, 
 .card__body {
-    padding: 2rem 3rem;
+    padding: 2rem 7%;
 }
 
 .card--primary
@@ -353,7 +355,7 @@ a {
 }
 
 .plan__price {
-    font-size: 6rem;
+    font-size: 5rem;
 }
 
 .plan_billing-cyle {
@@ -400,6 +402,10 @@ a {
 }
 
 @media screen and (min-width: 1024px) {
+    .plan--popular {
+        transform: scale(1.1);
+    }
+        
     .plan__name {
         font-size: 1.4rem;
     }
@@ -811,6 +817,7 @@ a {
 /* Footer */
 .footer {
     background: #232323;
+    padding-top: 10rem;
 }
 
 .footer a {
@@ -884,4 +891,8 @@ a:hover {
     .footer__heading {
         font-size: 1.6rem;
     }
+}
+
+.callout-signup {
+    transform: translateY(5rem);
 }
